# BeamOpt

BOO/: Draft.m  Main_4piIMRT_spine02_cpu.m  PreDosecalc_IMRT.m  PreOptimize.sh  PreOptimize_IMRT.m  dataView.py  debug_preprocess.sh  java.opts  run_dosecalc.sh
BOO/utilities/: InitIMRTparams.m  InitIMRTparams_NoRing.m
CCCS/: CMakeDefs.cmake
CCCS/DoseCalcIO/: calc_header.cpp  paths.cpp  paths.h
CCCS/RTClasses/: CMakeLists.txt
CCCS/dosecalc-beam/: CMakeLists.txt
CCCS/dosecalc-beamlet/: main.cu
CCCS/dosecalc-preprocess/: cudaMemFunctions.cu  kernels.cuh  main.cu
